syntax = "proto3";

package sync;

service UserSync {
  rpc SyncUser (User) returns (SyncResponse) {}
  rpc SyncUserStats (UserStats) returns (SyncResponse) {}
  rpc DeleteUser (DeleteUserRequest) returns (SyncResponse) {}
  rpc UpdateUser (UpdateUserRequest) returns (SyncResponse) {}
  
  // Role operations
  rpc SyncRole (Role) returns (SyncResponse) {}
  rpc DeleteRole (DeleteRoleRequest) returns (SyncResponse) {}
  rpc UpdateRole (UpdateRoleRequest) returns (SyncResponse) {}
  
  // UserRole operations
  rpc SyncUserRole (UserRole) returns (SyncResponse) {}
  rpc DeleteUserRole (DeleteUserRoleRequest) returns (SyncResponse) {}
  rpc UpdateUserRole (UpdateUserRoleRequest) returns (SyncResponse) {}

  // Wallet operations
  rpc SyncWallet (Wallet) returns (SyncResponse) {}
  rpc SyncWallets (Wallets) returns (SyncResponse) {}
}

message User {
  string user_id = 1;
  int32 user_id_serial = 2;
  string first_name = 3;
  string middle_name = 4;
  string full_name = 5;
  string user_name = 6;
  string last_name = 7;
  string profile_image = 8;
  string bio = 9;
  string phone_number = 10;
  string status = 11;
  string password = 12;
  string gender = 13;
  string dob = 14;
  string email = 15;
  bool verified = 16;
  bool email_is_verified = 17;
  bool phone_number_is_verified = 18;
  string created_at = 19;
  string updated_at = 20;
  string created_by = 21;
  string updated_by = 22;
}

message UserStats {
  string user_stats_id = 1;
  int32 user_stats_id_serial = 2;
  string user_id = 3;
  int32 followers_count = 4;
  int32 followings_count = 5;
  int32 un_read_notifications_count = 6;
  int32 cart_items_count = 7;
  int32 orders_count = 8;
  int32 pending_orders_count = 9;
  int32 affiliated_products_count = 10;
  int32 approved_orders_count = 11;
  int32 delivered_orders_count = 12;
  int32 canceled_orders_count = 13;
  int32 pre_orders_count = 14;
  int32 requested_pre_orders_count = 15;
  int32 approved_pre_orders_count = 16;
  int32 declined_pre_orders_count = 17;
  int32 pending_pre_orders_count = 18;
  int32 delivered_pre_orders_count = 19;
  int32 canceled_pre_orders_count = 20;
  int32 total_likes = 21;
  int32 total_posts = 22;
  string created_at = 23;
  string updated_at = 24;
  string created_by = 25;
  string updated_by = 26;
}

message DeleteUserRequest {
  string user_id = 1;
}

message UpdateUserRequest {
  string user_id = 1;
  User user = 2;
}

message SyncResponse {
  bool success = 1;
  string message = 2;
  map<string, string> data = 3;
}

message Role {
  string role_id = 1;
  int32 role_id_serial = 2;
  string role_name = 3;
  string role_description = 4;
  string created_at = 5;
  string updated_at = 6;
  string created_by = 7;
  string updated_by = 8;
}

message UserRole {
  string user_role_id = 1;
  int32 user_role_id_serial = 2;
  string user_id = 3;
  string role_id = 4;
  string created_at = 5;
  string updated_at = 6;
  string created_by = 7;
  string updated_by = 8;
}

message Wallet {
  string wallet_id = 1;
  int32 wallet_id_serial = 2;
  string user_id = 3;
  double balance = 4;
  string currency = 5;
  string created_at = 6;
  string updated_at = 7;
  string created_by = 8;
  string updated_by = 9;
}

message  Wallets {
  repeated Wallet wallets = 1;
}

message DeleteRoleRequest {
  string role_id = 1;
}

message UpdateRoleRequest {
  string role_id = 1;
  Role role = 2;
}

message DeleteUserRoleRequest {
  string user_role_id = 1;
}

message UpdateUserRoleRequest {
  string user_role_id = 1;
  UserRole user_role = 2;
}
